--- a/photo-app-users-reset-api-sam/template.yaml
+++ b/photo-app-users-reset-api-sam/template.yaml
@@ -9,27 +9,24 @@ Description: >
 Globals:
   Function:
     Timeout: 20
-    MemorySize: 128
+    Runtime: java11
+    Architectures:
+      - x86_64
+    MemorySize: 512
 
-    # You can add LoggingConfig parameters such as the Logformat, Log Group, and SystemLogLevel or ApplicationLogLevel. Learn more here https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/sam-resource-function.html#sam-function-loggingconfig.
-    LoggingConfig:
-      LogFormat: JSON
 Resources:
-  HelloWorldFunction:
+  PostHandlerLambdaFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
-      CodeUri: HelloWorldFunction
-      Handler: helloworld.App::handleRequest
-      Runtime: java11
-      Architectures:
-      - x86_64
-      MemorySize: 512
-      Environment: # More info about Env Vars: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#environment-object
-        Variables:
-          PARAM1: VALUE
-          JAVA_TOOL_OPTIONS: -XX:+TieredCompilation -XX:TieredStopAtLevel=1 # More info about tiered compilation https://aws.amazon.com/blogs/compute/optimizing-aws-lambda-function-performance-for-java/
+      CodeUri: PhotoAppUserApi # Points to the directory where the Lambda function code is located #IMPORTANT
+      Handler: com.appsdeveloperblog.aws.photoapp.users.PostHandler::handleRequest
+
+      # Environment: # More info about Env Vars: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#environment-object
+      #   Variables:
+      #     PARAM1: VALUE
+      #     JAVA_TOOL_OPTIONS: -XX:+TieredCompilation -XX:TieredStopAtLevel=1 # More info about tiered compilation https://aws.amazon.com/blogs/compute/optimizing-aws-lambda-function-performance-for-java/
       Events:
-        HelloWorld:
+        PhotoAppUsers:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties:
             Path: /hello
@@ -52,12 +49,12 @@ Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
   # Find out more about other implicit resources you can reference within SAM
   # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
-  HelloWorldApi:
-    Description: API Gateway endpoint URL for Prod stage for Hello World function
-    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/hello/"
-  HelloWorldFunction:
-    Description: Hello World Lambda Function ARN
-    Value: !GetAtt HelloWorldFunction.Arn
-  HelloWorldFunctionIamRole:
-    Description: Implicit IAM Role created for Hello World function
+  PhotoAppUsersApi:
+    Description: "an API endpoint to create a new user"
+    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/hello/" # !Sub is a intrinsic function that substitutes variables in a string at deployment time
+  PostHandlerLambdaFunction:
+    Description: "PostHandlerLambdaFunction ARN"
+    Value: !GetAtt PostHandlerLambdaFunction.Arn
+  PostHandlerLambdaFunctionIamRole:
+    Description: "Implicit IAM Role created for PostHandlerLambdaFunction"
     Value: !GetAtt HelloWorldFunctionRole.Arn
