feat: Add sam build and sam deploy guided scripts to Makefile

--- a/photo-app-users-reset-api-sam/Makefile
+++ b/photo-app-users-reset-api-sam/Makefile
@@ -1,11 +1,20 @@
-# Makefile for running and debugging AWS Lambda functions locally with SAM
+# Makefile for AWS SAM project with targets for building, deploying, running, and debugging
 
-# Run target
-.PHONY: run
+# Define all phony targets to avoid conflicts with files named the same
+.PHONY: run run-debug sam-deploy-guided sam-build
+
+# Run the Lambda function locally using SAM with the specified event file
 run:
 	sam local invoke PostHandlerLambdaFunction --event events/event.json
 
-# Run with Debug target
-.PHONY: run-debug
+# Run the Lambda function locally with debugging enabled on port 5858
 run-debug:
 	sam local invoke PostHandlerLambdaFunction --event events/event.json -d 5858
+
+# Build the SAM application (compiles code and prepares deployment artifacts)
+sam-build:
+	sam build
+
+# Deploy the SAM application interactively (prompts for parameters)
+sam-deploy-guided:
+	sam deploy --guided
