--- a/photo-app-users-reset-api-sam/samconfig.toml
+++ b/photo-app-users-reset-api-sam/samconfig.toml
@@ -16,6 +16,11 @@ lint = true
 capabilities = "CAPABILITY_IAM"
 confirm_changeset = true
 resolve_s3 = true
+stack_name = "PhotoAppUsersRestAPI"
+s3_prefix = "PhotoAppUsersRestAPI"
+region = "us-east-1"
+image_repositories = []
+disable_rollback = true
 
 [default.package.parameters]
 resolve_s3 = true
