--- a/photo-app-users-reset-api-sam/samconfig.toml
+++ b/photo-app-users-reset-api-sam/samconfig.toml
@@ -16,7 +16,7 @@ lint = true
 capabilities = "CAPABILITY_IAM"
 confirm_changeset = true
 resolve_s3 = true
-stack_name = "PhotoAppUsersRestAPI"
+stack_name = "PhotoAppUsersRestAPI" ## STACK NAME
 s3_prefix = "PhotoAppUsersRestAPI"
 region = "us-east-1"
 image_repositories = []
