--- a/DataTransformationExample/template.yaml
+++ b/DataTransformationExample/template.yaml
@@ -9,10 +9,6 @@ Description: >
 Globals:
   Function:
     Timeout: 20
-    Runtime: java11
-    Architectures:
-      - x86_64
-    MemorySize: 512
 
 Resources:
   PostHandlerFunction:
@@ -20,20 +16,30 @@ Resources:
     Properties:
       CodeUri: DataTransformationExample
       Handler: com.appsdeveloperblog.aws.datatransformation.lambda.PostHandler::handleRequest
+      Runtime: java11
+      Architectures:
+        - x86_64
+      MemorySize: 512
+      Environment: # More info about Env Vars: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#environment-object
+        Variables:
+          PARAM1: VALUE
       Events:
         PhotoAppUsers:
-          Type: Api
+          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties:
             Path: /users
             Method: post
 
 Outputs:
+  # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
+  # Find out more about other implicit resources you can reference within SAM
+  # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
   PhotoAppUsersApi:
     Description: "An API endpoint to create a new User"
     Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/users"
-  PostHandlerFunction:
-    Description: "PostHandlerFunction ARN value"
-    Value: !GetAtt PostHandlerFunction.Arn
-  PostHandlerFunctionIamRole:
-    Description: "Implicit IAM Role created for PostHandlerFunction"
-    Value: !GetAtt PostHandlerFunction.Arn
+  PostHandlerLambdaFunction:
+    Description: "PostHandlerLambdaFunction ARN value"
+    Value: !GetAtt PostHandlerLambdaFunction.Arn
+  PostHandlerLambdaFunctionIamRole:
+    Description: "Implicit IAM Role created for PostHandlerLambdaFunction"
+    Value: !GetAtt PostHandlerLambdaFunctionRole.Arn
