--- a/error-response-example/template.yaml
+++ b/error-response-example/template.yaml
@@ -15,46 +15,28 @@ Resources:
   DivisionExampleFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
-      CodeUri: DivisionExampleFunction
+      CodeUri: ErrorResponseExample # DIRECTORY NAME. DIRECTORY NAME NOT THE FUNCTION NAME!!!!!!!
       Handler: com.appsdeveloperblog.aws.errorresponse.lambda.DivisionExampleFunction::handleRequest
       Runtime: java11
       Architectures:
       - x86_64
       MemorySize: 512
-      # Environment: # More info about Env Vars: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#environment-object
-      #   Variables:
-      #     PARAM1: VALUE
-      #     JAVA_TOOL_OPTIONS: -XX:+TieredCompilation -XX:TieredStopAtLevel=1 # More info about tiered compilation https://aws.amazon.com/blogs/compute/optimizing-aws-lambda-function-performance-for-java/
       Events:
-        HelloWorld:
+        Division:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties:
             Path: /divide
             Method: get
-
-  ApplicationResourceGroup:
-    Type: AWS::ResourceGroups::Group
-    Properties:
-      Name:
-        Fn::Sub: ApplicationInsights-SAM-${AWS::StackName}
-      ResourceQuery:
-        Type: CLOUDFORMATION_STACK_1_0
-  ApplicationInsightsMonitoring:
-    Type: AWS::ApplicationInsights::Application
-    Properties:
-      ResourceGroupName:
-        Ref: ApplicationResourceGroup
-      AutoConfigurationEnabled: 'true'
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
   # Find out more about other implicit resources you can reference within SAM
   # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
-  HelloWorldApi:
-    Description: API Gateway endpoint URL for Prod stage for Hello World function
+  DivisionApi:
+    Description: API Gateway endpoint URL for Prod stage for DivisionExampleFunction function
     Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/hello/"
   DivisionExampleFunction:
-    Description: Hello World Lambda Function ARN
+    Description: DivisionExampleFunction Lambda Function ARN
     Value: !GetAtt DivisionExampleFunction.Arn
   DivisionExampleFunctionIamRole:
-    Description: Implicit IAM Role created for Hello World function
+    Description: Implicit IAM Role created for DivisionExampleFunction function
     Value: !GetAtt DivisionExampleFunctionRole.Arn
