--- a/error-response-example-non-proxy/template.yaml
+++ b/error-response-example-non-proxy/template.yaml
@@ -10,51 +10,34 @@ Globals:
   Function:
     Timeout: 20
     MemorySize: 128
+    Runtime: java11
+    Architectures:
+      - x86_64
+    Environment:
+      Variables:
+        PARAM1: VALUE
+        JAVA_TOOL_OPTIONS: -XX:+TieredCompilation -XX:TieredStopAtLevel=1
 
 Resources:
-  HelloWorldFunction:
-    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
+  DivisionExampleFunction: # Nome do recurso da função Lambda. É como você referencia essa função no template.
+    Type: AWS::Serverless::Function # Especifica o tipo de recurso. Aqui indica que estamos definindo uma função Lambda Serverless.
     Properties:
-      CodeUri: HelloWorldFunction
-      Handler: helloworld.App::handleRequest
-      Runtime: java11
-      Architectures:
-      - x86_64
-      MemorySize: 512
-      Environment: # More info about Env Vars: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#environment-object
-        Variables:
-          PARAM1: VALUE
-          JAVA_TOOL_OPTIONS: -XX:+TieredCompilation -XX:TieredStopAtLevel=1 # More info about tiered compilation https://aws.amazon.com/blogs/compute/optimizing-aws-lambda-function-performance-for-java/
+      CodeUri: ErrorResponseExampleNonProxy # Caminho para o código da função Lambda. Pode ser um diretório local ou um bucket S3.
+      Handler: com.appsdeveloperblog.aws.errorresponse.lambda.DivisionExampleFunction::handleRequest # Especifica o ponto de entrada do código Lambda. Inclui o pacote e o método handler.
       Events:
-        HelloWorld:
-          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
+        DefaultErrorResponseExample: # Nome do evento. Pode ser qualquer nome, mas é usado para se referir a esse evento no contexto do template.
+          Type: Api # Define o tipo do evento como API Gateway. Indica que essa função Lambda será acionada por uma chamada HTTP.
           Properties:
-            Path: /hello
-            Method: get
+            Path: /divide # Caminho no API Gateway que acionará a função. Neste caso, um endpoint "/divide".
+            Method: post # Método HTTP que irá disparar a função. Aqui é o método POST.
 
-  ApplicationResourceGroup:
-    Type: AWS::ResourceGroups::Group
-    Properties:
-      Name:
-        Fn::Sub: ApplicationInsights-SAM-${AWS::StackName}
-      ResourceQuery:
-        Type: CLOUDFORMATION_STACK_1_0
-  ApplicationInsightsMonitoring:
-    Type: AWS::ApplicationInsights::Application
-    Properties:
-      ResourceGroupName:
-        Ref: ApplicationResourceGroup
-      AutoConfigurationEnabled: 'true'
 Outputs:
-  # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
-  # Find out more about other implicit resources you can reference within SAM
-  # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
   HelloWorldApi:
-    Description: API Gateway endpoint URL for Prod stage for Hello World function
+    Description: API Gateway endpoint URL for Prod stage for HelloWorldApi function
     Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/hello/"
-  HelloWorldFunction:
-    Description: Hello World Lambda Function ARN
-    Value: !GetAtt HelloWorldFunction.Arn
-  HelloWorldFunctionIamRole:
-    Description: Implicit IAM Role created for Hello World function
-    Value: !GetAtt HelloWorldFunctionRole.Arn
+  DivisionExampleFunction:
+    Description: HelloWorldApi Lambda Function ARN
+    Value: !GetAtt DivisionExampleFunction.Arn
+  DivisionExampleFunctionIamRole:
+    Description: Implicit IAM Role created for HelloWorldApi function
+    Value: !GetAtt DivisionExampleFunctionRole.Arn
