--- a/lambda-version-example/Makefile
+++ b/lambda-version-example/Makefile
@@ -5,11 +5,11 @@
 
 # Run the Lambda function locally using SAM with the specified event file
 run:
-	sam local invoke DivisionExampleFunction --event events/event.json
+	sam local invoke LambdaVersionExampleFunction --event events/event.json
 
 # Run the Lambda function locally with debugging enabled on port 5858
 run-debug:
-	sam local invoke DivisionExampleFunction --event events/event.json -d 5858
+	sam local invoke LambdaVersionExampleFunction --event events/event.json -d 5858
 
 # Build the SAM application (compiles code and prepares deployment artifacts)
 sam-build:
@@ -25,8 +25,8 @@ sam-deploy:
 
 # View the logs of the deployed Lambda function by stack name
 sam-log:
-	sam logs --name DivisionExampleFunction --stack-name error-response-example-non-proxy
+	sam logs --name LambdaVersionExampleFunction --stack-name lambda-version-exampl
 
 # Delete the SAM application stack (removes all AWS resources created)
 sam-delete:
-	sam delete --stack-name error-response-example-non-proxy
+	sam delete --stack-name lambda-version-exampl
