--- a/environment-variables-example/template.yaml
+++ b/environment-variables-example/template.yaml
@@ -9,6 +9,11 @@ Globals:
   Function:
     Timeout: 20
     MemorySize: 128
+    Environment:
+      Variables:
+        MY_VARIABLE: Environment variable value 1
+        MY_COGNITO_USER_POOL_ID: ABCD12345
+        MY_COGNITO_CLIENT_APP_SECRET: SOMEVALUETHATISNOTASECRET
 
 Resources:
   EnvironmentVariablesExampleFunction:
@@ -18,12 +23,9 @@ Resources:
       Handler: com.appsdeveloperblog.aws.lambda.EnvironmentVariablesExample::handleRequest
       Runtime: java11
       Architectures:
-      - x86_64
+        - x86_64
       MemorySize: 512
-      Environment:
-        Variables:
-          PARAM1: VALUE
-          JAVA_TOOL_OPTIONS: -XX:+TieredCompilation -XX:TieredStopAtLevel=1
+
       Events:
         HelloWorld:
           Type: Api
