--- a/environment-variables-example/EnvironmentVariablesExample/pom.xml
+++ b/environment-variables-example/EnvironmentVariablesExample/pom.xml
@@ -28,6 +28,19 @@
           <version>4.13.1</version>
           <scope>test</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/software.amazon.awssdk/kms -->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>kms</artifactId>
+            <version>2.28.26</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-kms</artifactId>
+            <version>1.12.529</version>
+        </dependency>
     </dependencies>
 
     <build>
